Added more comments for easier readability. And cleaned up textView objects.

--- a/app/src/main/res/layout/activity_reader.xml
+++ b/app/src/main/res/layout/activity_reader.xml
@@ -48,6 +48,7 @@
             android:text="ZOOM"
             android:layout_centerVertical="true"
             android:textSize="16dp"
+            android:textColor="#FFFFFF"
             android:layout_toRightOf="@+id/minusButton"/>
 
         <Button
